--- a/web/default.html
+++ b/web/default.html
@@ -92,11 +92,118 @@
     </div>
   </div>
   <div class="new-arrivals">
+    <div class="new-arrivals__title">
+
+    </div>
+    <div class="the-best-carousel">
+      <div class="container" >
+          <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="4000">
+              <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                  <div class="carousel-item col-md-3  ">
+                     <div class="panel panel-default">
+                        <div class="panel-thumbnail">
+                          <a href="#" title="image 1" class="thumb">
+                            <img class="img-fluid mx-auto d-block" src="assets/images/tea1.jpeg" alt="slide 1">
+                          </a>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="carousel-item col-md-3 ">
+                     <div class="panel panel-default">
+                        <div class="panel-thumbnail">
+                          <a href="#" title="image 3" class="thumb">
+                           <img class="img-fluid mx-auto d-block" src="assets/images/tea2.jpeg" alt="slide 2">
+                          </a>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="carousel-item col-md-3 ">
+                     <div class="panel panel-default">
+                        <div class="panel-thumbnail">
+                          <a href="#" title="image 4" class="thumb">
+                           <img class="img-fluid mx-auto d-block" src="assets/images/tea3.jpeg" alt="slide 3">
+                          </a>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="carousel-item col-md-3 active">
+                      <div class="panel panel-default">
+                        <div class="panel-thumbnail">
+                          <a href="#" title="image 5" class="thumb">
+                           <img class="img-fluid mx-auto d-block" src="assets/images/tea4.jpeg" alt="slide 4">
+                          </a>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="carousel-item col-md-3 ">
+                    <div class="panel panel-default">
+                        <div class="panel-thumbnail">
+                          <a href="#" title="image 6" class="thumb">
+                            <img class="img-fluid mx-auto d-block" src="assets/images/tea5.jpeg" alt="slide 5">
+                          </a>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="carousel-item col-md-3 ">
+                     <div class="panel panel-default">
+                        <div class="panel-thumbnail">
+                          <a href="#" title="image 7" class="thumb">
+                            <img class="img-fluid mx-auto d-block" src="assets/images/tea6.jpeg" alt="slide 6">
+                          </a>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="carousel-item col-md-3 ">
+                     <div class="panel panel-default">
+                        <div class="panel-thumbnail">
+                          <a href="#" title="image 8" class="thumb">
+                            <img class="img-fluid mx-auto d-block" src="assets/images/tea7.jpeg" alt="slide 7">
+                          </a>
+                        </div>
+                      </div>
+                  </div>
+                   <div class="carousel-item col-md-3  ">
+                      <div class="panel panel-default">
+                        <div class="panel-thumbnail">
+                          <a href="#" title="image 2" class="thumb">
+                           <img class="img-fluid mx-auto d-block" src="assets/images/tea1.jpeg" alt="slide 8">
+                          </a>
+                        </div>
+
+                      </div>
+                  </div>
+                  <div class="carousel-item col-md-3  ">
+                      <div class="panel panel-default">
+                        <div class="panel-thumbnail">
+                          <a href="#" title="image 2" class="thumb">
+                           <img class="img-fluid mx-auto d-block" src="assets/images/tea2.jpeg" alt="slide 9">
+                          </a>
+                        </div>
+
+                      </div>
+                  </div>
+              </div>
+              <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next text-faded" href="#myCarousel" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+              </a>
+          </div>
+      </div>
+    </div>
+
+    <div class="new-arivals__button">
+
+    </div>
 
   </div>
-  <div class="blog-page">
-
-  </div>
+  <!-- <div class="blog-page">
+  data-interval="10000"
+data-interval="2000"
+  </div> -->
 
 </div>
 
