--- a/web/default.html
+++ b/web/default.html
@@ -92,119 +92,133 @@
     </div>
   </div>
   <div class="new-arrivals">
+
     <div class="new-arrivals__title">
 
     </div>
+
     <div class="the-best-carousel">
-      <div class="container" >
-          <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="4000">
-              <div class="carousel-inner row w-100 mx-auto" role="listbox">
-                  <div class="carousel-item col-md-3  ">
-                     <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                          <a href="#" title="image 1" class="thumb">
-                            <img class="img-fluid mx-auto d-block" src="assets/images/tea1.jpeg" alt="slide 1">
+      <div class="container">
+      	<div class="row">
+      		<div class="MultiCarousel" data-items="1,3,5,6" data-slide="1" id="MultiCarousel"  data-interval="1000">
+                  <div class="MultiCarousel-inner">
+                      <div class="item">
+                          <div class="pad15">
+                            <a href="#">
+                              <img src="assets/images/tea1.jpeg" alt="">
+                              <p>Hibiscus Flower</p>
+                              <p>$7.00</p>
+                            </a>
+                          </div>
+                      </div>
+                      <div class="item">
+                          <div class="pad15">
+                            <a href="#">
+                              <img src="assets/images/tea2.jpeg" alt="">
+                              <p>Chamomile Tea</p>
+                              <p>$8.00</p>
+                            </a>
+                          </div>
+                      </div>
+                      <div class="item">
+                          <div class="pad15">
+                            <a href="#">
+                              <img src="assets/images/tea3.jpeg" alt="">
+                              <p>Golden Dragon</p>
+                              <p>$10.00</p>
+                            </a>
+                          </div>
+                      </div>
+                      <div class="item">
+                        <div class="pad15">
+                          <a href="#">
+                            <img src="assets/images/tea4.jpeg" alt="">
+                            <p>Rosemary Specials</p>
+                            <p>$7.00</p>
+                          </a>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <div class="pad15">
+                          <a href="#">
+                            <img src="assets/images/tea5.jpeg" alt="">
+                            <p>Raspberry Leaves</p>
+                            <p>$9.00</p>
+                          </a>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <div class="pad15">
+                          <a href="#">
+                            <img src="assets/images/tea6.jpeg" alt="">
+                            <p>Simply The Best</p>
+                            <p>$8.00</p>
+                          </a>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <div class="pad15">
+                          <a href="#">
+                            <img src="assets/images/tea7.jpeg" alt="">
+                            <p>Never Ending</p>
+                            <p>$7.00</p>
+                          </a>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <div class="pad15">
+                          <a href="#">
+                            <img src="assets/images/tea1.jpeg" alt="">
+                            <p>Jungle Passion</p>
+                            <p>$6.00</p>
+                          </a>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <div class="pad15">
+                          <a href="#">
+                            <img src="assets/images/tea2.jpeg" alt="">
+                            <p>Forest Berry</p>
+                            <p>$8.00</p>
+                          </a>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <div class="pad15">
+                          <a href="#">
+                            <img src="assets/images/tea3.jpeg" alt="">
+                            <p>Dark Knight</p>
+                            <p>$9.00</p>
+                          </a>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <div class="pad15">
+                          <a href="#">
+                            <img src="assets/images/tea4.jpeg" alt="">
+                            <p>White nights</p>
+                            <p>$7.00</p>
                           </a>
                         </div>
                       </div>
                   </div>
-                  <div class="carousel-item col-md-3 ">
-                     <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                          <a href="#" title="image 3" class="thumb">
-                           <img class="img-fluid mx-auto d-block" src="assets/images/tea2.jpeg" alt="slide 2">
-                          </a>
-                        </div>
-                      </div>
-                  </div>
-                  <div class="carousel-item col-md-3 ">
-                     <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                          <a href="#" title="image 4" class="thumb">
-                           <img class="img-fluid mx-auto d-block" src="assets/images/tea3.jpeg" alt="slide 3">
-                          </a>
-                        </div>
-                      </div>
-                  </div>
-                  <div class="carousel-item col-md-3 active">
-                      <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                          <a href="#" title="image 5" class="thumb">
-                           <img class="img-fluid mx-auto d-block" src="assets/images/tea4.jpeg" alt="slide 4">
-                          </a>
-                        </div>
-                      </div>
-                  </div>
-                  <div class="carousel-item col-md-3 ">
-                    <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                          <a href="#" title="image 6" class="thumb">
-                            <img class="img-fluid mx-auto d-block" src="assets/images/tea5.jpeg" alt="slide 5">
-                          </a>
-                        </div>
-                      </div>
-                  </div>
-                  <div class="carousel-item col-md-3 ">
-                     <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                          <a href="#" title="image 7" class="thumb">
-                            <img class="img-fluid mx-auto d-block" src="assets/images/tea6.jpeg" alt="slide 6">
-                          </a>
-                        </div>
-                      </div>
-                  </div>
-                  <div class="carousel-item col-md-3 ">
-                     <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                          <a href="#" title="image 8" class="thumb">
-                            <img class="img-fluid mx-auto d-block" src="assets/images/tea7.jpeg" alt="slide 7">
-                          </a>
-                        </div>
-                      </div>
-                  </div>
-                   <div class="carousel-item col-md-3  ">
-                      <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                          <a href="#" title="image 2" class="thumb">
-                           <img class="img-fluid mx-auto d-block" src="assets/images/tea1.jpeg" alt="slide 8">
-                          </a>
-                        </div>
-
-                      </div>
-                  </div>
-                  <div class="carousel-item col-md-3  ">
-                      <div class="panel panel-default">
-                        <div class="panel-thumbnail">
-                          <a href="#" title="image 2" class="thumb">
-                           <img class="img-fluid mx-auto d-block" src="assets/images/tea2.jpeg" alt="slide 9">
-                          </a>
-                        </div>
-
-                      </div>
-                  </div>
+                  <button class="btn new-arivals__btn leftLst"><</button>
+                  <button class="btn btn-primary rightLst">></button>
               </div>
-              <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next text-faded" href="#myCarousel" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-              </a>
-          </div>
+      	</div>
+      	<div class="row">
+      	    <div class="col-md-12 text-center">
+              <div class="new-arivals__button">
+                <button type="button" name="button">Shop All</button>
+              </div>
+      	    </div>
+      	</div>
       </div>
     </div>
 
-    <div class="new-arivals__button">
 
-    </div>
 
   </div>
-  <!-- <div class="blog-page">
-  data-interval="10000"
-data-interval="2000"
-  </div> -->
-
 </div>
 
 
